Change gtk for gtkglmm

--- a/src/Makefile
+++ b/src/Makefile
@@ -35,9 +35,12 @@ TARGET = SimTaDyn
 
 ###################################################
 # Compil options
-CC = gcc
-CFLAGS = -W -Wall -Wextra -O2 -g `pkg-config --cflags gtk+-2.0 glib-2.0 gtkglext-1.0 pango`
-LDFLAGS = `pkg-config --libs gtk+-2.0 glib-2.0 gtkglext-1.0 pango`
+#CC = gcc
+#CFLAGS = -W -Wall -Wextra -O2 -g `pkg-config --cflags gtk+-2.0 glib-2.0 gtkglext-1.0 pango`
+#LDFLAGS = `pkg-config --libs gtk+-2.0 glib-2.0 gtkglext-1.0 pango`
+CC=g++
+CFLAGS = -W -Wall -Wextra -O2 -g `pkg-config --cflags gtkmm-2.4 glibmm-2.4 gtkglextmm-1.2`
+LDFLAGS = `pkg-config --libs gtkmm-2.4 glibmm-2.4 gtkglextmm-1.2`
 DEFINES =
 
 ###################################################
@@ -55,7 +58,7 @@ $(TARGET): $(OBJECTS)
 	@$(call print-link,"Linking","$(TARGET)","$(DEST)/$@","")
 	@cd $(DEST) && $(CC) $(OBJECTS) -o $(TARGET) $(LIBS) $(LDFLAGS)
 
-%.o: %.c
+%.o: %.cpp
 	@$(call print-comp,"Compiling C","$(TARGET)","$<")
 	@$(CC) $(CFLAGS) $(DEFINES) $(INCLUDES) -c $(abspath $<) -o $(abspath $(DEST)/$@)
 
