--- a/src/Makefile
+++ b/src/Makefile
@@ -31,9 +31,9 @@ VPATH=.:$(DEST):gui:cells:common
 ###################################################
 # Set objects architecture specific
 OBJECTS_COMMON = Color.o Vector3D.o BoundingBox.o
-OBJECTS_GUI = #camera2D.o renderer.o opgl.o gui.o
-OBJECTS_CELLS = #nodes.o arcs.o shapefile.o
-OBJECTS = $(OBJECTS_COMMON) $(OBJECTS_GUI) $(OBJECTS_CELLS) main.o
+OBJECTS_CELLS = SimTaDynNodes.o SimTaDynArcs.o ShapeFile.o
+OBJECTS_GUI = Camera2D.o Renderer.o opgl.o gui.o
+OBJECTS = $(OBJECTS_COMMON) $(OBJECTS_CELLS) $(OBJECTS_GUI) main.o
 TARGET = SimTaDyn
 
 ###################################################
