Adding texture and font

--- a/src/Makefile
+++ b/src/Makefile
@@ -35,7 +35,7 @@ OBJECTS_RTREE = BoundingBox.o RTreeNode.o RTreeIndex.o RTreeSplit.o
 OBJECTS_FORTH = Forth.o ForthDico.o ForthPrimitives.o
 OBJECTS_CELLS = SimTaDynCells.o SimTaDynGraphs.o ShapeFile.o
  # SimTaDynNodes.o SimTaDynArcs.o ShapeFile.o
-OBJECTS_GUI = Camera2D.o Renderer.o opgl.o gui.o
+OBJECTS_GUI = opgl_ext.o Camera2D.o Renderer.o Texture.o Fonts.o opgl.o gui.o
 OBJECTS = $(OBJECTS_COMMON) $(OBJECTS_RTREE) $(OBJECTS_FORTH) $(OBJECTS_CELLS) $(OBJECTS_GUI) main.o
 TARGET = SimTaDyn
 
