--- a/src/Makefile
+++ b/src/Makefile
@@ -22,21 +22,22 @@ endif
 
 ###################################################
 # Set include paths
-INCLUDES = -I. -Igui -Icells -Iforth -Irtree -Icommon -I/usr/include/mysql
+INCLUDES = -I. -Igui -Iloader -Icells -Iforth -Irtree -Icommon -I/usr/include/mysql
 
 ###################################################
 # Path for Makefile to find *.o
-VPATH=.:$(BUILD):gui:cells:forth:rtree:common
+VPATH=.:$(BUILD):gui:loader:cells:forth:rtree:common
 
 ###################################################
 # Set objects architecture specific
 OBJECTS_COMMON = Color.o Vector3D.o Camera2D.o
-OBJECTS_RTREE = BoundingBox.o RTreeNode.o RTreeIndex.o RTreeSplit.o
-OBJECTS_FORTH = Forth.o ForthDico.o ForthPrimitives.o
-OBJECTS_CELLS = SimTaDynCells.o SimTaDynGraphs.o ShapeFile.o
- # SimTaDynNodes.o SimTaDynArcs.o ShapeFile.o
-OBJECTS_GUI = OpenGL.o Textures.o Fonts.o Renderer.o DrawingArea.o TextEditor.o SimTaDynWindow.o
-OBJECTS = $(OBJECTS_COMMON) $(OBJECTS_RTREE) $(OBJECTS_FORTH) $(OBJECTS_CELLS) $(OBJECTS_GUI) main.o
+OBJECTS_RTREE  = BoundingBox.o RTreeNode.o RTreeIndex.o RTreeSplit.o
+OBJECTS_FORTH  = ForthReader.o ForthDico.o ForthPrimitives.o ForthInner.o
+OBJECTS_CELLS  = SimTaDynCells.o SimTaDynGraphs.o
+OBJECTS_LOADER = ShapeFile.o
+OBJECTS_GUI    = OpenGL.o Textures.o Fonts.o Renderer.o DrawingArea.o \
+	         TextEditor.o ForthEditor.o SimTaDynWindow.o SimForth.o
+OBJECTS = $(OBJECTS_COMMON) $(OBJECTS_RTREE) $(OBJECTS_FORTH) $(OBJECTS_CELLS) $(OBJECTS_LOADER) $(OBJECTS_GUI) main.o
 TARGET = SimTaDyn
 
 ###################################################
@@ -44,8 +45,8 @@ TARGET = SimTaDyn
 #CC = gcc
 #CFLAGS = -W -Wall -Wextra -O2 -g `pkg-config --cflags gtk+-2.0 glib-2.0 gtkglext-1.0 pango`
 #LDFLAGS = `pkg-config --libs gtk+-2.0 glib-2.0 gtkglext-1.0 pango`
-CXX=g++
-CXXFLAGS = -W -Wall -Wextra -O2 -g -std=c++11 `pkg-config --cflags gtkmm-2.4 glibmm-2.4 gtkglextmm-1.2 sigc++-2.0`
+CXX = g++
+CXXFLAGS = -W -Wall -Wextra -O0 -g -std=c++11 `pkg-config --cflags gtkmm-2.4 glibmm-2.4 gtkglextmm-1.2 sigc++-2.0`
 LDFLAGS = `pkg-config --libs gtkmm-2.4 glibmm-2.4 gtkglextmm-1.2 sigc++-2.0`
 DEFINES = -DCHECK_OPENGL
 
