Cleaning code architecture and adding new functionalities
-- TextEditor: move m_menu[], m_submenu[] from ForthEditor: this is for
having its own menu (avoiding to be shared with Forth menu)
-- Map loaders: change hpp file names and create the MapEditor class.
-- Context: simplifying it by removing members.
-- SimTaDynWindow: adding new actions: load/save forth dictionary, load
shapefiles (not yet displayed).

--- a/src/Makefile
+++ b/src/Makefile
@@ -45,7 +45,7 @@ OBJECTS_RTREE    = BoundingBox.o RTreeNode.o RTreeIndex.o RTreeSplit.o
 OBJECTS_MAP      = SimTaDynCells.o SimTaDynGraphs.o
 OBJECTS_LOADER   = ShapeFile.o
 OBJECTS_FORTH    = ForthReader.o ForthDico.o ForthPrimitives.o ForthInner.o
-OBJECTS_GUI      = TextEditor.o ForthEditor.o SimTaDynWindow.o
+OBJECTS_GUI      = TextEditor.o ForthEditor.o MapEditor.o SimTaDynWindow.o
 OBJECTS_SIMTADYN = Renderer.o SimForth.o main.o
 
 OBJECTS         = $(OBJECTS_COMMON) $(OBJECTS_OPENGL) $(OBJECTS_RTREE) \
